--- a/config.yaml
+++ b/config.yaml
@@ -30,4 +30,6 @@ keywords:
         filters: ["AlphaDou", "Doudizhu", "DouZero"]
     "Reward Shaping":
         filters: ["Reward Shaping"]
+    "Potential Funtions":
+        filters: ["Potential Funtions"]
         
